# forthright

./: LICENSE  Makefile  README.md  forthright.cabal
src/Forthright/: Instruction.hs  Machine.hs
test/Forthright/: MachineSpec.hs
